[gd_scene load_steps=5 format=3 uid="uid://bnp3rxl8qykgo"]

[ext_resource type="Script" path="res://portal.gd" id="1_qryrl"]
[ext_resource type="Texture2D" uid="uid://ugx17n8jdja0" path="res://assets/objects/portal.png" id="1_qxrab"]
[ext_resource type="AudioStream" uid="uid://cpkdmv5cg1btl" path="res://assets/sounds/659369__matrixxx__retro-portal-opens-up-or-closes.wav" id="3_u0p6d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0udmr"]
size = Vector2(77, 90)

[node name="Portal" type="Area2D"]
script = ExtResource("1_qryrl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(56, 58)
scale = Vector2(1.71875, 1.71875)
texture = ExtResource("1_qxrab")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(55.5, 64)
shape = SubResource("RectangleShape2D_0udmr")

[node name="PortalSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_u0p6d")
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
